web/css/style.css
/* ... */
.button:hover {
    background-color: #444;
}

.small {
    font-size: 20px;
    height: 40px;
    width: 40px;
}

.normal {
    font-size: 20px;
    height: 40px;
    padding: 6px 8px;

}

.large {
    font-size: 20px;
    height: 40px;
    padding: 8px 16px;
}

.imageContainer {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 20px;
}

.section-remaining {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    gap: 20px;
    width: 100%;
}

.import-custom-select {
    position: relative;
}

.import-custom-select select {
    appearance: none;
    /*  safari  */
    -webkit-appearance: none;
    /*  other styles for aesthetics */
    width: 100%;
    font-size: 1.1rem;
    padding: 0.5em 2em 0.5em 1em;
    background-color: #fff;
    border: 1px solid #caced1;
    border-radius: 0.25rem;
    color: #000;
    cursor: pointer;
}

.import-custom-select .import-custom-select::before,
.import-custom-select .import-custom-select::after {
    --size: 0.3rem;
    content: "";
    position: absolute;
    right: 1rem;
    pointer-events: none;
}

.import-custom-select .import-custom-select::before {
    border-left: var(--size) solid transparent;
    border-right: var(--size) solid transparent;
    border-bottom: var(--size) solid black;
    top: 40%;
}

.import-custom-select .import-custom-select::after {
    border-left: var(--size) solid transparent;
    border-right: var(--size) solid transparent;
    border-top: var(--size) solid black;
    top: 55%;
}

#import-result-container {
    display: flex;
    gap: 20px;
    width: 80%;
    flex: 1;
    max-width: 80%;
    justify-content: center;
    flex-wrap: wrap;

}

.import-result-card {
    display: flex;
    flex-direction: column;
    gap: 20px;
    background-color: #574f4f0f;
    border: 1px solid #ccc;
    padding: 20px;
    width: 80%;
    border-radius: 4px;
    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3),
        -5px -5px 10px rgba(255, 255, 255, 0.5);
}


.import-result-card .header {
    display: flex;
    width: 100%;
    flex: 1;
    flex-direction: column;
}

.import-result-card .footer {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex: 1;
    width: 100%;
}

.import-result-card .content {
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.import-result-card .footer .result-actions {
    display: flex;
    gap: 10px;

}

.import-result-card .footer .result-actions .result-action {
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
    background-color: #111;
    color: white;
    border: none;
    border-radius: 4px;
    padding: 6px;
}

.import-result-card .footer .result-actions .result-action:hover {
    background-color: #444;
}


/* project page */

.project-list {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
    gap: 20px;
    background-color: #574f4f0f;
    border: 1px solid #ccc;
    padding: 20px;
    border-radius: 4px;
    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3),
        -5px -5px 10px rgba(255, 255, 255, 0.5);
}

.project-list li {
    display: flex;
    flex-direction: column;
    gap: 10px;
    padding: 10px;
    border-radius: 4px;
    border: 1px solid #ccc;
    background-color: #fff;
    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3),
        -5px -5px 10px rgba(255, 255, 255, 0.5);
}

.project-list li .header {
    display: flex;
    width: 100%;
    flex: 1;
    justify-content: space-between;
    align-items: center;
}

.project-list li .project-name {
    font-size: 1.5rem;
    font-weight: bold;
}

.project-list li .project-owner {
    font-size: 1rem;
    font-weight: bold;
}

.project-list li .project-description {
    font-size: 1rem;
}

.separator {
    width: 100%;
    height: 1px;
    background-color: #ccc;
}

.project-list li .footer {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex: 1;
    width: 100%;
}

.project-list li .content {
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.project-list li .footer .project-actions {
    display: flex;
    gap: 10px;

}

.project-list li .footer .project-actions .project-action {
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
    background-color: #111;
    color: white;
    border: none;
    border-radius: 4px;
    padding: 6px;
}

.project-list li .footer .project-actions .project-action:hover {
    background-color: #444;
}

table {
    width: 100%;
    border-collapse: collapse;
    font-family: Arial, sans-serif;
    margin: 20px 0;

}

thead {
    background-color: rgb(58, 57, 57);
    color: white;
}

th,
td {
    padding: 8px;
    text-align: center;
    border-bottom: 1px solid #ddd;
}

th {
    height: 50px;
}

tbody tr:hover {
    background-color: #f5f5f5;
}



/* import page */

.form {
    display: flex;
    flex-direction: column;
    gap: 20px;
    background-color: #574f4f0f;
    border: 1px solid #ccc;
    padding: 20px;
    border-radius: 4px;
    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3),
        -5px -5px 10px rgba(255, 255, 255, 0.5);
}

.form .row {
    display: flex;
    min-width: 500px;
    max-width: 600px;
    position: relative;
    align-items: center;
}

.form .row input {
    flex: 1;
    padding: 10px;
    border-radius: 4px;
    border: 1px solid #ccc;
}

.form .row input:focus {
    outline: none;
    border: 1px solid #000;
}

.form .row p {
    color: #111;
    width: 150px;
    padding: 10px;
    border-radius: 4px;
    font-size: large;
    display: flex;
    align-items: center;
}

.form .custom-select {
    min-width: 350px;
    position: relative;
}
/* ... */

